--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body, html {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  background-color: #f4f7fa;
+  background-color: #fef4df;
   font-family: Arial, sans-serif; /* Change this to modify the font family */
 }
 
@@ -18,7 +18,6 @@ body, html {
   width: 100%;
   padding: 20px;
   margin-left: 20px;
-  background-color: #ccc; /* Change this color to modify the navbar background color */
   color: #000000;
   text-align: left; /* Align the logo to the left */
   font-size: 24px;
