--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -1,10 +1,12 @@
 .chat-container {
+  flex: 1;
   background-color: white;
   border-radius: 8px;
-  /* border: 1px solid black; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 700px; /* Increased width */
+  height: 600px;
+  max-width: 700px;
   width: 100%;
   padding: 20px;
-  margin-top: 20px;
+  margin-top: 40px;
+  margin-left: 400px;
 }
