--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -6,6 +6,7 @@
   text-align: left; /* Align the logo to the left */
   font-size: 24px;
   font-weight: bold;
+  border-bottom: 2px solid black;
 }
 
 .logo {
